ajeitando as imagens

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -766,3 +766,27 @@ textarea{
     border-radius: rgb(255, 0, 0);
     padding: -1px;
 }
+
+.modelo h1{
+    text-align: center;
+    color: #ff5100;
+}
+
+.img2{
+   display: block;
+   
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.img3{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+    height: ;
+ }
+
+.container2{
+    margin: auto;
+}
